<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.main.PaymentFragment">

    <data>

        <variable
            name="vm"
            type="com.nestpay.pg.presentation.viewmodel.PaymentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_password_change_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center|start"
            android:text="@string/text_order_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_franchise_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/text_order_franchise_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password_change_title" />

        <TextView
            android:id="@+id/text_franchise_name_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_unactive_round"
            android:gravity="center|start"
            android:padding="15dp"
            android:text="우리샵(Worrishop)"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_franchise_name_title" />

        <TextView
            android:id="@+id/text_product_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:text="@string/text_order_product_name_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_franchise_name_value" />

        <EditText
            android:id="@+id/text_product_name_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_round"
            android:gravity="center|start"
            android:hint="@string/edit_order_product_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:text="@={vm.textProductName}"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name_title" />

        <TextView
            android:id="@+id/text_product_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:text="@string/text_order_pay_price_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name_value" />

        <EditText
            android:id="@+id/text_product_price_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_round"
            android:gravity="center|start"
            android:hint="@string/edit_order_pay_price_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="15dp"
            android:text="@={vm.textProductPrice}"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_price_title" />

        <TextView
            android:id="@+id/text_product_memo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:text="@string/text_order_memo_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_price_value" />

        <EditText
            android:id="@+id/text_product_memo_value"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_round"
            android:gravity="center|start"
            android:hint="@string/edit_order_memo_hint"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:maxLength="100"
            android:padding="15dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_memo_title" />

        <Button
            android:id="@+id/btn_product_order_confirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:background="@drawable/selector_btn_round"
            android:onClick="@{()->vm.onOrderClick()}"
            android:text="@string/btn_order"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_memo_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>