<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.main.MainFragment">

    <data>

        <variable
            name="vm"
            type="com.nestpay.pg.presentation.viewmodel.PaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_pay_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/text_pay_list_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_pay_date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_pay_date_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_product_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_pay_list_title" />

        <TextView
            android:id="@+id/text_product_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_order_product_name_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_product_price_title"
            app:layout_constraintStart_toEndOf="@+id/text_pay_date_title"
            app:layout_constraintTop_toTopOf="@+id/text_pay_date_title" />

        <TextView
            android:id="@+id/text_product_price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_order_pay_price_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_card_type_title"
            app:layout_constraintStart_toEndOf="@+id/text_product_name_title"
            app:layout_constraintTop_toTopOf="@+id/text_pay_date_title" />

        <TextView
            android:id="@+id/text_card_type_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_card_type_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_card_number_title"
            app:layout_constraintStart_toEndOf="@+id/text_product_price_title"
            app:layout_constraintTop_toTopOf="@+id/text_pay_date_title" />

        <TextView
            android:id="@+id/text_card_number_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/text_card_num_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_card_type_title"
            app:layout_constraintTop_toTopOf="@+id/text_pay_date_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_pay_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_edit_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_pay_date_title"
            tools:listitem="@layout/item_pay_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>