<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.nestpay.pg.presentation.viewmodel.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_password_change_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/text_search_password_change_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_password_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/text_search_password_change_new"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password_change_title" />

        <EditText
            android:id="@+id/edit_password_change_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_round"
            android:gravity="center|start"
            android:hint="@string/edit_sign_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="14"
            android:padding="15dp"
            android:text="@={vm.textPasswd}"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password_change" />

        <TextView
            android:id="@+id/text_password_confirm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/text_sign_password_confirm_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_change_value" />

        <EditText
            android:id="@+id/edit_password_confirm_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_edit_round"
            android:gravity="center|start"
            android:hint="@string/edit_sign_password_confirm_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="14"
            android:padding="15dp"
            android:text="@={vm.textRePasswd}"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password_confirm_title" />


        <Button
            android:id="@+id/btn_change_password_confirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/selector_btn_round"
            android:onClick="@{()->vm.onChangePasswdClick()}"
            android:text="@string/btn_chang_passwd"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_confirm_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>